# freeapihub-python-sdk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
freeapihub/: __init__.py  api.py  config.py
freeapihub/api/: book.py  joke.py  language.py  product.py  quote.py  stock.py  user.py
freeapihub/core/: config.py  http_client.py  logger.py
tests/: test.py
