[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freeapihub"
version = "1.0.0"
authors = [{ name = "Rehan", email = "rehanalire52@email.com" }]
description = "A Python SDK for FreeApiHub, providing simple access to free APIs with support for data retrieval and integration."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
keywords = ["api", "sdk", "freeapihub", "data-retrieval", "python-sdk"]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/rehan-adi/freeapihub-python-sdk"
Repository = "https://github.com/rehan-adi/freeapihub-python-sdk"
Documentation = "https://freeapi-hub.vercel.app/docs"

[tool.setuptools]
packages = ["freeapihub"]

[project.classifiers]
"Development Status :: 5 - Production/Stable"
"Intended Audience :: Developers"
"License :: OSI Approved :: Apache Software License"
"Programming Language :: Python"
"Programming Language :: Python :: 3"
"Programming Language :: Python :: 3.7"
"Programming Language :: Python :: 3.8"
"Programming Language :: Python :: 3.9"
"Programming Language :: Python :: 3.10"
"Programming Language :: Python :: 3.11"
"Programming Language :: Python :: 3 :: Only"
"Topic :: Software Development :: Libraries"
